# ai-code-review-refactor-framework

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
backend/: __init__.py
backend/api/: __init__.py
backend/gateway/: __init__.py  config.py  logging.py  main.py
docker/: Dockerfile.agent  Dockerfile.gateway  docker-compose.yml
